--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ADC | Cyber Security & Home Solutions</title>
+    <title>ADC | Sécurité & Solutions Connectées</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>ADC - Secure & Connected Solutions</h1>
+            <h1>ADC - Sécurité & Solutions Connectées</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home">Accueil</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#about">À propos</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -24,59 +24,62 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <h2>Your Partner in Cyber Security & Connected Home Solutions</h2>
-            <p>We specialize in Cybersecurity software, Home Lab setups, and Smart Home Integration. Stay secure, stay connected.</p>
-            <a href="#contact" class="cta-button">Get In Touch</a>
+            <h2>Votre Partenaire en Sécurité Informatique & Maison Connectée</h2>
+            <p>Nous proposons des logiciels de sécurité, des solutions pour laboratoires personnels, et des systèmes pour maisons connectées.</p>
+            <a href="#contact" class="cta-button">Nous Contacter</a>
         </div>
     </section>
 
     <section id="services" class="services">
         <div class="container">
-            <h2>Our Services</h2>
+            <h2>Nos Services</h2>
             <div class="service">
-                <h3>Cyber Security Software</h3>
-                <p>Protect your business and personal data with our advanced cybersecurity software.</p>
+                <img src="https://via.placeholder.com/300x200" alt="Cyber Security">
+                <h3>Logiciels de Sécurité Informatique</h3>
+                <p>Protégez vos données grâce à nos logiciels avancés de cybersécurité.</p>
             </div>
             <div class="service">
-                <h3>Home Lab Solutions</h3>
-                <p>Set up your private tech playground with custom home lab solutions tailored to your needs.</p>
+                <img src="https://via.placeholder.com/300x200" alt="Home Lab">
+                <h3>Solutions de Laboratoire Personnel</h3>
+                <p>Créez votre propre environnement de test avec des solutions adaptées à vos besoins.</p>
             </div>
             <div class="service">
-                <h3>Connected Home Solutions</h3>
-                <p>Integrate smart technology into your home for seamless control and security.</p>
+                <img src="https://via.placeholder.com/300x200" alt="Connected Home">
+                <h3>Maison Connectée</h3>
+                <p>Intégrez des technologies intelligentes dans votre maison pour un contrôle et une sécurité optimale.</p>
             </div>
         </div>
     </section>
 
     <section id="about" class="about-us">
         <div class="container">
-            <h2>About ADC</h2>
-            <p>ADC is dedicated to providing cutting-edge solutions for cybersecurity, home labs, and smart homes. Our mission is to make technology work for you, whether in your home or office.</p>
+            <h2>À propos de ADC</h2>
+            <p>ADC est une entreprise spécialisée dans la cybersécurité, les laboratoires personnels et les maisons intelligentes. Notre mission est de simplifier la technologie pour répondre à vos besoins, que ce soit chez vous ou au bureau.</p>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <div class="container">
-            <h2>Contact Us</h2>
-            <p>Email us at <a href="mailto:adc.contact@adc.com">adc.contact@adc.com</a></p>
+            <h2>Contactez-Nous</h2>
+            <p>Email: <a href="mailto:adc.contact@adc.com">adc.contact@adc.com</a></p>
             <form action="#" method="POST">
-                <label for="name">Your Name</label>
+                <label for="name">Votre Nom</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Your Email</label>
+                <label for="email">Votre Email</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Your Message</label>
+                <label for="message">Votre Message</label>
                 <textarea id="message" name="message" required></textarea>
 
-                <button type="submit">Send Message</button>
+                <button type="submit">Envoyer</button>
             </form>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 ADC. All rights reserved.</p>
+            <p>&copy; 2024 ADC. Tous droits réservés.</p>
         </div>
     </footer>
 
