--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <div class="container">
             <h2>Nos Services</h2>
             <div class="service">
-                <img src="https://via.placeholder.com/300x200" alt="Cyber Security">
+                <img src="cyber.jpeg" alt="Cyber Security">
                 <h3>Logiciels de Sécurité Informatique</h3>
                 <p>Protégez vos données grâce à nos logiciels avancés de cybersécurité.</p>
             </div>
             <div class="service">
-                <img src="https://via.placeholder.com/300x200" alt="Home Lab">
+                <img src="image.jpeg" alt="Home Lab">
                 <h3>Solutions de Laboratoire Personnel</h3>
                 <p>Créez votre propre environnement de test avec des solutions adaptées à vos besoins.</p>
             </div>
             <div class="service">
-                <img src="https://via.placeholder.com/300x200" alt="Connected Home">
+                <img src="pc.jpeg" alt="Connected Home">
                 <h3>Maison Connectée</h3>
                 <p>Intégrez des technologies intelligentes dans votre maison pour un contrôle et une sécurité optimale.</p>
             </div>
@@ -54,6 +54,7 @@
     <section id="about" class="about-us">
         <div class="container">
             <h2>À propos de ADC</h2>
+            <img src="home.jpeg" alt="Home Image" style="width:100%; height:auto; margin-bottom:20px;">
             <p>ADC est une entreprise spécialisée dans la cybersécurité, les laboratoires personnels et les maisons intelligentes. Notre mission est de simplifier la technologie pour répondre à vos besoins, que ce soit chez vous ou au bureau.</p>
         </div>
     </section>
