--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <p>Créez votre propre environnement de test avec des solutions adaptées à vos besoins.</p>
             </div>
             <div class="service">
-                <img src="pc.jpeg" alt="Connected Home">
+                <img src="home.jpeg" alt="Connected Home">
                 <h3>Maison Connectée</h3>
                 <p>Intégrez des technologies intelligentes dans votre maison pour un contrôle et une sécurité optimale.</p>
             </div>
@@ -260,15 +260,14 @@
 
     <section id="download" class="download-section">
         <div class="container">
-            <h2>Télécharger ADC.txt</h2>
-            <a href="ADC.txt" download class="download-button">Télécharger Maintenant</a>
+            <h2>Télécharger ADC-Secure</h2>
         </div>
     </section>
 
     <section id="about" class="about-us">
         <div class="container">
             <h2>À propos de ADC</h2>
-            <img src="home.jpeg" alt="Home Image" style="width:100%; height:auto; margin-bottom:20px;">
+            <img src="pc.jpeg" alt="Home Image" style="width:100%; height:auto; margin-bottom:20px;">
             <p>ADC est une entreprise spécialisée dans la cybersécurité, les laboratoires personnels et les maisons intelligentes. Notre mission est de simplifier la technologie pour répondre à vos besoins, que ce soit chez vous ou au bureau.</p>
         </div>
     </section>
