--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
 
         /* Styles des sections */
         header, footer { background-color: #003366; color: #fff; padding: 20px 0; text-align: center; }
-        .hero { background: url('https://via.placeholder.com/1500x400') no-repeat center center/cover; height: 400px; color: #fff; text-align: center; padding-top: 150px; }
-        .cta-button { background: #ff3333; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
+        .hero {  
+            height: 400px; 
+            color: #fff; 
+            text-align: center; 
+            padding-top: 150px; 
+        }
+        .cta-button {
+            background: #ff3333; 
+            color: #fff; 
+            padding: 10px 20px; 
+            text-decoration: none; 
+            border-radius: 5px; 
+        }
         .services, .about-us, .contact, .download-section { padding: 50px 0; text-align: center; }
     </style>
 </head>
