--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>Protégez vos données grâce à nos logiciels avancés de cybersécurité.</p>
             </div>
             <div class="service">
-                <img src="image.jpeg" alt="Home Lab">
+                <img src="home.jpeg" alt="Home Lab">
                 <h3>Solutions de Laboratoire Personnel</h3>
                 <p>Créez votre propre environnement de test avec des solutions adaptées à vos besoins.</p>
             </div>
@@ -54,7 +54,7 @@
     <section id="about" class="about-us">
         <div class="container">
             <h2>À propos de ADC</h2>
-            <img src="home.jpeg" alt="Home Image" style="width:100%; height:auto; margin-bottom:20px;">
+            <img src="cyber.jpeg" alt="Home Image" style="width:100%; height:auto; margin-bottom:20px;">
             <p>ADC est une entreprise spécialisée dans la cybersécurité, les laboratoires personnels et les maisons intelligentes. Notre mission est de simplifier la technologie pour répondre à vos besoins, que ce soit chez vous ou au bureau.</p>
         </div>
     </section>
