--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,7 +126,8 @@
             text-align: left;
         }
 
-        .contact form input, .contact form textarea {
+        .contact form input,
+        .contact form textarea {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
@@ -172,6 +174,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -186,7 +189,6 @@
             </nav>
         </div>
     </header>
-
     <section id="home" class="hero">
         <div class="container">
             <h2>Votre Partenaire en Sécurité Informatique & Maison Connectée</h2>
@@ -194,7 +196,6 @@
             <a href="#contact" class="cta-button">Nous Contacter</a>
         </div>
     </section>
-
     <section id="services" class="services">
         <div class="container">
             <h2>Nos Services</h2>
@@ -215,7 +216,6 @@
             </div>
         </div>
     </section>
-
     <section id="about" class="about-us">
         <div class="container">
             <h2>À propos de ADC</h2>
@@ -223,7 +223,6 @@
             <p>ADC est une entreprise spécialisée dans la cybersécurité, les laboratoires personnels et les maisons intelligentes. Notre mission est de simplifier la technologie pour répondre à vos besoins, que ce soit chez vous ou au bureau.</p>
         </div>
     </section>
-
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contactez-Nous</h2>
@@ -231,22 +230,19 @@
             <form action="#" method="POST">
                 <label for="name">Votre Nom</label>
                 <input type="text" id="name" name="name" required>
-
                 <label for="email">Votre Email</label>
                 <input type="email" id="email" name="email" required>
-
                 <label for="message">Votre Message</label>
                 <textarea id="message" name="message" required></textarea>
-
                 <button type="submit">Envoyer</button>
             </form>
         </div>
     </section>
-
     <footer>
         <div class="container">
             <p>&copy; 2024 ADC. Tous droits réservés.</p>
         </div>
     </footer>
 </body>
+
 </html>
